Fixed slidebar bug on iOS.

--- a/styles/mobile/theme/style.css
+++ b/styles/mobile/theme/style.css
@@ -377,7 +377,6 @@ blockquote {
 	bottom: 0;
 	right: 0;
 	z-index: 0;
-	width: 200px;
 	padding: 0;
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
